# artifacts/api-server/src/routes/players.ts
@@ -137,6 +137,32 @@ router.get("/:id", async (req, res) => {
     kick_power: player.kickPower,
     kick_return: player.kickReturn,
     long_snap: player.longSnap,
+    // Traits
+    clutch_trait: player.clutchTrait,
+    high_motor_trait: player.highMotorTrait,
+    penalty_trait: player.penaltyTrait,
+    predict_trait: player.predictTrait,
+    decision_maker_trait: player.decisionMakerTrait,
+    qb_style_trait: player.qbStyleTrait,
+    force_pass_trait: player.forcePassTrait,
+    sense_pressure_trait: player.sensePressureTrait,
+    throw_away_trait: player.throwAwayTrait,
+    tight_spiral_trait: player.tightSpiralTrait,
+    cover_ball_trait: player.coverBallTrait,
+    fight_for_yards_trait: player.fightForYardsTrait,
+    run_style: player.runStyle,
+    feet_in_bounds_trait: player.feetInBoundsTrait,
+    hp_catch_trait: player.hpCatchTrait,
+    play_ball_trait: player.playBallTrait,
+    pos_catch_trait: player.posCatchTrait,
+    yac_catch_trait: player.yacCatchTrait,
+    drop_open_pass_trait: player.dropOpenPassTrait,
+    big_hit_trait: player.bigHitTrait,
+    strip_ball_trait: player.stripBallTrait,
+    dl_bull_rush_trait: player.dlBullRushTrait,
+    dl_spin_trait: player.dlSpinTrait,
+    dl_swim_trait: player.dlSwimTrait,
+    lb_style_trait: player.lbStyleTrait,
   });
 });
 
